Update experiment value in config.yaml

--- a/TabNet.ipynb
+++ b/TabNet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "c71f5960-0143-4143-861c-98fb78b427ab",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "5be4e981-71fa-4008-8b8f-4c8aee882f02",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "a212be55-d0b9-48c6-946d-abf625901da2",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "a15cb186-823b-4281-9b97-eae2af787c9b",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "4e977ac0-7c79-4a7e-887b-37d8fdbb936a",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "7e6e6646-d407-40d7-83da-0871f7c23829",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "20cc4569-0860-4a1b-bd5c-77e1b079e0be",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "439e5944-ce0a-4ce3-ac0f-04a79a48b832",
    "metadata": {},
    "outputs": [],
@@ -418,32 +418,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40cc75f9",
+   "metadata": {},
+   "source": [
+    "#### Extracrting feature combined iportance mean of ensembles on the test data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "id": "3a1250bc",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing inputs shape: (8760, 34) testing targets shape: (8760, 5)\n",
+      "testing inputs shape: (8760, 34) testing targets shape: (8760, 5)\n",
+      "testing inputs shape: (8760, 34) testing targets shape: (8760, 5)\n",
+      "testing inputs shape: (8760, 34) testing targets shape: (8760, 5)\n",
+      "testing inputs shape: (8760, 34) testing targets shape: (8760, 5)\n",
+      "testing inputs shape: (8760, 34) testing targets shape: (8760, 5)\n",
+      "testing inputs shape: (8760, 34) testing targets shape: (8760, 5)\n",
+      "testing inputs shape: (8760, 34) testing targets shape: (8760, 5)\n",
+      "testing inputs shape: (8760, 34) testing targets shape: (8760, 5)\n",
+      "testing inputs shape: (8760, 34) testing targets shape: (8760, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "featImp = []\n",
+    "for Ens in range(10):\n",
+    "    X_test,Y_test = data_processing(input_file,ChSh_Coeff_file,input_variables,target_variables,test_dates_range,test_locations)\n",
+    "    print('testing inputs shape:',X_test.shape,'testing targets shape:',Y_test.shape)            \n",
+    "    OUTPUT_DIR = f'trained_models/models_{experiment}th_set/Ens_{Ens}'\n",
+    "    # --- load normalizer ---#\n",
+    "    min_max_scaler = joblib.load(f'{OUTPUT_DIR}/min_max_scaler.joblib')\n",
+    "    Y_test_trans = min_max_scaler.transform(Y_test)\n",
+    "    fSTR = f'{OUTPUT_DIR}/TabNet_HOLDOUT_Ens_{str(Ens)}.pkl'\n",
+    "    with open(fSTR, \"rb\") as f:\n",
+    "        tabReg = pickle.load(f)    \n",
+    "        # --- feat imp ---#\n",
+    "        featImp.append(myELI5(tabReg,X_test,Y_test_trans))\n",
+    "# create a pandas dataset using the input variables and the feature importance values according to the input valiables\n",
+    "df = pd.DataFrame({'Feature':input_variables,'Importance':np.array(featImp).mean(axis=0)})\n",
+    "df = df.sort_values(by='Importance',ascending=False)\n",
+    "df.to_csv(f'Coefficient_featImp_models_{experiment}th_set.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5a3c6580",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Feature  Importance\n",
+      "4         950ws   31.701181\n",
+      "8         i10fg   18.731205\n",
+      "3         975ws   18.004349\n",
+      "7          zust   11.206267\n",
+      "1         100ws   10.746998\n",
+      "2      100alpha    9.016201\n",
+      "16         ishf    7.763863\n",
+      "25   2mtempgrad    6.431320\n",
+      "14          blh    6.344593\n",
+      "6     950wsgrad    5.842685\n",
+      "0          10ws    5.505712\n",
+      "5     975wsgrad    4.431428\n",
+      "28  975tempgrad    3.648898\n",
+      "24        t_950    2.171849\n",
+      "23        t_975    1.797388\n",
+      "10          skt    1.613816\n",
+      "9           t2m    1.015507\n",
+      "22          bld    0.884120\n",
+      "21          cin    0.741210\n",
+      "12          d2m    0.723090\n",
+      "32      sinJDAY    0.542006\n",
+      "29  950tempgrad    0.525307\n",
+      "11         stl1    0.490911\n",
+      "13          msl    0.418906\n",
+      "27  dewtempsprd    0.318285\n",
+      "33      cosJDAY    0.210033\n",
+      "19          lcc    0.106727\n",
+      "26   sktempgrad    0.100658\n",
+      "15          cbh    0.079080\n",
+      "18          tcc    0.026271\n",
+      "17           ie    0.000618\n",
+      "31        cosHR   -0.031463\n",
+      "20         cape   -0.048757\n",
+      "30        sinHR   -0.101785\n"
+     ]
+    },
+    {
      "data": {
-      "text/html": [
-       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>TabNetRegressor(n_d=16, n_a=16, n_steps=3, gamma=1.1, cat_idxs=[], cat_dims=[], cat_emb_dim=[], n_independent=1, n_shared=3, epsilon=1e-15, momentum=0.02, lambda_sparse=0.001, seed=931, clip_value=1, verbose=1, optimizer_fn=&lt;class &#x27;torch.optim.adam.Adam&#x27;&gt;, optimizer_params={&#x27;lr&#x27;: 0.02}, scheduler_fn=None, scheduler_params={}, mask_type=&#x27;sparsemax&#x27;, input_dim=14, output_dim=5, device_name=&#x27;auto&#x27;, n_shared_decoder=1, n_indep_decoder=1, grouped_features=[])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">TabNetRegressor</label><div class=\"sk-toggleable__content\"><pre>TabNetRegressor(n_d=16, n_a=16, n_steps=3, gamma=1.1, cat_idxs=[], cat_dims=[], cat_emb_dim=[], n_independent=1, n_shared=3, epsilon=1e-15, momentum=0.02, lambda_sparse=0.001, seed=931, clip_value=1, verbose=1, optimizer_fn=&lt;class &#x27;torch.optim.adam.Adam&#x27;&gt;, optimizer_params={&#x27;lr&#x27;: 0.02}, scheduler_fn=None, scheduler_params={}, mask_type=&#x27;sparsemax&#x27;, input_dim=14, output_dim=5, device_name=&#x27;auto&#x27;, n_shared_decoder=1, n_indep_decoder=1, grouped_features=[])</pre></div></div></div></div></div>"
-      ],
       "text/plain": [
-       "TabNetRegressor(n_d=16, n_a=16, n_steps=3, gamma=1.1, cat_idxs=[], cat_dims=[], cat_emb_dim=[], n_independent=1, n_shared=3, epsilon=1e-15, momentum=0.02, lambda_sparse=0.001, seed=931, clip_value=1, verbose=1, optimizer_fn=<class 'torch.optim.adam.Adam'>, optimizer_params={'lr': 0.02}, scheduler_fn=None, scheduler_params={}, mask_type='sparsemax', input_dim=14, output_dim=5, device_name='auto', n_shared_decoder=1, n_indep_decoder=1, grouped_features=[])"
+       "4           950ws\n",
+       "8           i10fg\n",
+       "3           975ws\n",
+       "7            zust\n",
+       "1           100ws\n",
+       "2        100alpha\n",
+       "16           ishf\n",
+       "25     2mtempgrad\n",
+       "14            blh\n",
+       "6       950wsgrad\n",
+       "0            10ws\n",
+       "5       975wsgrad\n",
+       "28    975tempgrad\n",
+       "24          t_950\n",
+       "23          t_975\n",
+       "10            skt\n",
+       "9             t2m\n",
+       "22            bld\n",
+       "21            cin\n",
+       "12            d2m\n",
+       "Name: Feature, dtype: object"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Ens = 0\n",
-    "OUTPUT_DIR = f'trained_models/models_{experiment}th_set/Ens_{Ens}'\n",
-    "fSTR = f'{OUTPUT_DIR}/TabNet_HOLDOUT_Ens_{str(Ens)}.pkl'\n",
-    "with open(fSTR, \"rb\") as f:\n",
-    "    tabReg = pickle.load(f)\n",
-    "tabReg"
+    "print(df)\n",
+    "df['Feature'].iloc[:20]"
    ]
   },
   {
