--- a/CI2024_plots.ipynb
+++ b/CI2024_plots.ipynb
@@ -65,9 +65,7 @@
     "n_independent = config['n_independent']\n",
     "n_shared = config['n_shared']\n",
     "nTrial = config['nTrial']\n",
-    "nEns = config['nEns']\n",
-    "feature_importance = config['feature_importance']\n",
-    "number_of_features = config['number_of_features']"
+    "nEns = config['nEns']"
    ]
   },
   {
