Updated CI2024_plots to read only Cerra_height_level/2001.nc file

--- a/CI2024_plots.ipynb
+++ b/CI2024_plots.ipynb
@@ -188,14 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a51c2398-3d95-4a7e-b43c-b9622edd0059",
    "metadata": {},
    "outputs": [],
    "source": [
-    "CERRA_ds = xr.open_mfdataset(f'data/CERRA_height_level/*.nc',\n",
-    "                       combine='nested',\n",
-    "                       concat_dim='time')\n",
+    "CERRA_ds = xr.open_dataset(f'data/CERRA_height_level/2001.nc')\n",
     "Z = CERRA_ds.heightAboveGround.data\n",
     "ERA5 = xr.open_dataset(f'data/ERA5.nc')\n",
     "ChSh_Coeff = xr.open_dataset(f'data/Chebyshev_Coefficnents.nc')\n",
@@ -234,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "dcaca662-0244-4a85-97d3-57c5dfdc56da",
    "metadata": {},
    "outputs": [],
@@ -252,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "4a3d668d-97b9-40e5-a3ff-a7ab4b3aa4f8",
    "metadata": {},
    "outputs": [
@@ -292,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "40fad235-379b-4ead-b37a-a9983de7275e",
    "metadata": {},
    "outputs": [],
@@ -362,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "ecfd4c2f-326b-4ec2-9ad0-faa696d377dd",
    "metadata": {},
    "outputs": [
@@ -383,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "426bfcea-bd6e-4c26-811e-cd6ff5ff654a",
    "metadata": {},
    "outputs": [],
@@ -415,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e00d207f-8ac6-4c8b-a58d-176901862fe6",
    "metadata": {},
    "outputs": [],
@@ -462,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "6302a105-c5c2-48fc-b1db-e8770d8958c4",
    "metadata": {},
    "outputs": [],
@@ -481,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "87d8f70b-0292-4d5f-afb2-1483dff0ae96",
    "metadata": {},
    "outputs": [],
@@ -500,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "f430db0e-55f1-414c-bf1d-334fba446201",
    "metadata": {},
    "outputs": [
@@ -543,7 +541,7 @@
        " 'DYCos']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "6e56e312-feea-4f41-a412-71305829592a",
    "metadata": {},
    "outputs": [
@@ -654,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "dde0645c-1f00-484d-a77c-41231d5dd381",
    "metadata": {},
    "outputs": [],
@@ -724,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "631bfb55",
    "metadata": {},
    "outputs": [],
@@ -734,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "5247e07f-aacd-4c5d-abfb-b1a2b6663b09",
    "metadata": {},
    "outputs": [
@@ -766,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "894af3e1-3a8a-4e0e-9bd8-16873784a5e2",
    "metadata": {},
    "outputs": [
@@ -798,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "3aead219-e5e5-43ad-8bbc-422951b6ea16",
    "metadata": {},
    "outputs": [
