Update FIG_DIR path in CI2024_plots.ipynb

--- a/CI2024_plots.ipynb
+++ b/CI2024_plots.ipynb
@@ -75,7 +75,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FIG_DIR = '/home/harish/Dropbox/Apps/Overleaf/CI2024/'"
+    "FIG_DIR = 'Figures'\n",
+    "if not os.path.exists(FIG_DIR):\n",
+    "    os.makedirs(FIG_DIR)"
    ]
   },
   {
