Remove nEns from config and training file

--- a/CI2024_plots.ipynb
+++ b/CI2024_plots.ipynb
@@ -64,8 +64,7 @@
     "n_steps = config['n_steps']\n",
     "n_independent = config['n_independent']\n",
     "n_shared = config['n_shared']\n",
-    "nTrial = config['nTrial']\n",
-    "nEns = config['nEns']"
+    "nTrial = config['nTrial']"
    ]
   },
   {
